--- a/proposal.html
+++ b/proposal.html
@@ -8,7 +8,7 @@
 <body class="sans">
 <a href="./index.html">HOME</a> / <b>
 <a href="#">PROPOSAL</a>
-</b> / <a href="./milestone.html">MILESTONE</a> / <a href="./project.html">PROJECT</a>  / <a href="./demo.html">DEMO</a>
+</b> / <a href="./milestone.html">MILESTONE</a> / <a href="./project.html">WRITEUP</a>  / <a href="./demo.html">DEMO</a>
 <br />
 <br />
 <br />
@@ -406,6 +406,18 @@ Updated as I go along.
     <a href="https://discoverthreejs.com/">https://discoverthreejs.com/</a>
     <ul>
       <li>Three.js SkeletonHelper documentation (to visualize skeleton)</li>
+    </ul>
+  </li>
+  <li>
+    <a href="https://threejsfundamentals.org/threejs/lessons/threejs-custom-buffergeometry.html">https://threejsfundamentals.org/threejs/lessons/threejs-custom-buffergeometry.html</a>
+    <ul>
+      <li>Creating a buffer geometry from scratch</li>
+    </ul>
+  </li>
+  <li>
+    <a href="https://stackoverflow.com/questions/31539130/display-wireframe-and-solid-color">https://stackoverflow.com/questions/31539130/display-wireframe-and-solid-color</a>
+    <ul>
+      <li>Wireframe for debugging.</li>
     </ul>
   </li>
 </ul>
