--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="icon" href="penrosetriangle.svg">
 </head>
 <body class="sans">
-<b><a href="#">HOME</a></b> / <a href="./proposal.html">PROPOSAL</a> / <a href="./milestone.html">MILESTONE</a> / <a href="./project.html">PROJECT</a>  / <a href="./demo.html">DEMO</a>
+<b><a href="#">HOME</a></b> / <a href="./proposal.html">PROPOSAL</a> / <a href="./milestone.html">MILESTONE</a> / <a href="./project.html">WRITEUP</a>  / <a href="./demo.html">DEMO</a>
 <br />
 <br />
 <br />
