Update progress on schedule, milestone, writeup

--- a/demo.html
+++ b/demo.html
@@ -9,6 +9,8 @@
   <noscript>
     Please enable JavaScript to see demo.
   </noscript>
+
+    <!-- You can move target point with WASD for the x- and z- axes, and hold SHIFT while moving your mouse up or down to move in the y-axis. -->
   <!-- <script src="./lib/three.js"></script> -->
 	<script src="./lib/Tween.min.js"></script>
 	<script src="./lib/perlin.js"></script>
