--- a/milestone.html
+++ b/milestone.html
@@ -48,11 +48,24 @@ I went through three iterations of model-creation because of the various challen
   </tr>
 </table>
 <h3>Demo</h3>
-I implemented the interactive demo interface. Currently, the demo only has forward kinematics.
-<video style="width:100%" preload controls>
-    <source src="./images/FK_demo.mov" />
-    <p>Your browser doesn't support my video. Here is a <a href="./images/FK_demo.mov">link to the video</a> instead.</p>
-</video>
+I implemented the interactive demo interface. Currently, the demo only has forward kinematics and a moveable target.
+<br />
+<br />
+<div>
+  <video style="width:100%;padding:0 10%;" preload controls>
+      <source src="./images/FK_demo.mov" />
+      <p>Your browser doesn't support my video. Here is a <a href="./images/FK_demo.mov">link to the video</a> instead.</p>
+  </video>
+  <figcaption style="width:100%;padding:0 10%;">Major feature 1: Posing the model</figcaption>
+</div>
+<br />
+<div>
+  <video style="width:100%;padding:0 10%;" preload controls>
+      <source src="./images/target_demo.mov" />
+      <p>Your browser doesn't support my video. Here is a <a href="./images/target_demo.mov">link to the video</a> instead.</p>
+  </video>
+  <figcaption style="width:100%;padding:0 10%;">Major feature 2: Moving the target point</figcaption>
+</div>
 <h2>Progress</h2>
 I have managed to achieve everything I have set out to do so my current progress is exactly as planned.
 <h2>Work Plan Updates</h2>
@@ -60,7 +73,7 @@ The most updated version of the work plan is <a href="./proposal.html">here</a>.
 <br />
 <br />
 The changes I have made to the plan are:
-<p class="highlight-orange_background"><i>August 4 Update</i>: Made SMCM a goal and moved the two models to reach goal. </p>
+<p class="highlight-orange_background"><i>August 4 Update</i>: Made SMCM a [goal] and moved the two models to [reach goal]. </p>
 <br />
 </body>
 </html>
