Added direct links in milestone to schedule and changelog

--- a/milestone.html
+++ b/milestone.html
@@ -69,10 +69,10 @@ I implemented the interactive demo interface. Currently, the demo only has forwa
 <h2>Progress</h2>
 I have managed to achieve everything I have set out to do so my current progress is exactly as planned.
 <h2>Work Plan Updates</h2>
-The most updated version of the work plan is <a href="./proposal.html">here</a>.
+The most updated version of the work plan is <a href="./proposal.html#schedule">here</a>.
 <br />
 <br />
-The changes I have made to the plan are:
+The <a href="./proposal.html#changelog">changes</a> I have made to the plan are:
 <p class="highlight-orange_background"><i>August 4 Update</i>: Made SMCM a [goal] and moved the two models to [reach goal]. </p>
 <br />
 </body>
