--- a/proposal.html
+++ b/proposal.html
@@ -18,6 +18,7 @@
 Eunice Chan | <i>August 1, 2020</i>
 <br />
 <br />
+<h2 id="changelog">Changelog</h2>
 <p class="highlight-orange_background"><i>August 4 Update</i>: Made SMCM a goal and moved the two models to reach goal. </p>
 <h2>Summary</h2>
 In this project, I will explore and implement the common techniques to tackle inverse kinematics (IK). I am particularly interested in IK algorithms that allow a greater degree of ability to control stylistic variations of the animation. Because of this, I will primarily be looking at the iterative methods using a cost function to be minimized and Sequential Monte Carlo methods (SMCM) for solving IK problems.
@@ -79,7 +80,7 @@ Add style to the movements and wrap up project.
   <li>For each of the IK methods, modify the constraints such that the movement is stylized in some way. Compare the movements with and without the additional style constraints.</li>
 </ul>
 <br />
-<h2>Schedule</h2>
+<h2 id="schedule">Schedule</h2>
 Updated as I go along.
 <br />
 <h3>Week 1: August 1 - August 7</h3>
